2003-10-23  Jakub Steiner <jimmac@ximian.com>

	* 48x48/stock/generic/stock_calendar-and-tasks.png: for
	  Evolution's preferences dialog

2003-10-23  Jakub Steiner <jimmac@ximian.com>

	* 24x24/stock/generic/stock_edit.png
	* 32x32/stock/generic/stock_edit.png
	* 48x48/stock/generic/stock_edit.png
	* {24x24,32x32,48x48}/stock/generic/Makefile.am:
	  for some reason 24x24 was missing. I added 32x32 and 48x48
	  since it may be used in Evolution prefrences dialog.

	* 16x16/stock/flag/??.png: some minor updates of the flags

2003-10-22  Jakub Steiner <jimmac@ximian.com>

	* TODO: updated
	* configure.in
	* 16x16/stock/Makefile.am
	* 16x16/stock/flag/Makefile.am
	* 16x16/stock/flag/*.png: small icons for gkb

2003-10-21  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/generic/stock_weather-showers.png
	* 16x16/stock/generic/stock_weather-snow.png: ehm. I
	  actually found my older Evolution icons that work better
	  in that they are distiguishable from each other.

2003-10-21  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/media/stock_music-library.png
	* 24x24/stock/media/stock_music-library.png
	* {16x16,24x24}/stock/media/Makefila.am: for Rhythmbox

2003-10-21  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/media/stock_playlist.png
	* 16x16/stock/media/stock_smart-playlist.png
	* 24x24/stock/media/stock_playlist.png
	* 24x24/stock/media/stock_smart-playlist.png
	* {16x16,24x24}/stock/media/Makefile.am:
	  Rhythmbox icons

	* 16x16/stock/net/stock_channel.png
	* 24x24/stock/net/stock_channel.png
	* 32x32/stock/net/stock_channel.png
	* 48x48/stock/net/stock_channel.png
	* {16x16,24x24,32x32,48x48}/stock/net/Makefile.am:
	  from RC

2003-10-21  Jakub Steiner <jimmac@ximian.com>

	* TODO: update

2003-10-21  Jakub Steiner <jimmac@ximian.com>

	* 48x48/emblems/emblem-distinguished.icon.in
	* 48x48/emblems/emblem-distinguished.png
	* 48x48/emblems/emblem-draft.icon.in
	* 48x48/emblems/emblem-draft.png
	* 48x48/emblems/emblem-new.icon.in