@@ -6,16 +6,17 @@ subtype=document
 icondir = $(datadir)/icons/gnome/$(iconsize)/$(category)/$(subtype)
 
 icon_DATA =\
-   stock_new-drawing.png \
-   stock_new-formula.png \
-   stock_new-html.png \
-   stock_new-labels.png \
-   stock_new-master-document.png \
-   stock_new-presentation.png \
-   stock_new-spreadsheet.png \
-   stock_new-template.png \
-   stock_new-text.png \
-   stock_todo.png \
+	stock_certificate.png		\
+	stock_new-drawing.png 		\
+	stock_new-formula.png 		\
+	stock_new-html.png 		\
+	stock_new-labels.png 		\
+	stock_new-master-document.png 	\
+	stock_new-presentation.png 	\
+	stock_new-spreadsheet.png 	\
+	stock_new-template.png 		\
+	stock_new-text.png 		\
+	stock_todo.png 			\
 	$(NULL)
 
 EXTRA_DIST = $(icon_DATA)
