@@ -1,5 +1,6 @@
 2003-10-23  Jakub Steiner <jimmac@ximian.com>
 
+	* 48x48/stock/document/stock_certificate.png
 	* 48x48/stock/generic/stock_calendar-and-tasks.png: for
 	  Evolution's preferences dialog
 
